--- a/doc/latex/si7021_8h.tex
+++ b/doc/latex/si7021_8h.tex
@@ -86,7 +86,7 @@ struct \hyperlink{structsi7021__config__t}{si7021\+\_\+config\+\_\+t}
 \subsection*{Typedefs}
 \begin{DoxyCompactItemize}
 \item 
-typedef enum \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON} \hyperlink{si7021_8h_afd2b81672571b0b768341fc251a9965b}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}
+typedef enum \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON} \hyperlink{si7021_8h_a5776594c8675bec0e49bfcc556d80850}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}
 \begin{DoxyCompactList}\small\item\em Enum contain all valid Resolution configuration of sensor. \end{DoxyCompactList}\item 
 typedef enum \hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+S\+T\+A\+T\+US} \hyperlink{si7021_8h_a2ebdc2e1ec4e81de336c5441a6b11a0e}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+S\+T\+A\+T\+US}
 \begin{DoxyCompactList}\small\item\em V\+DD status of sensor return type. \end{DoxyCompactList}\item 
@@ -97,14 +97,14 @@ typedef uint8\+\_\+t \hyperlink{si7021_8h_aeec681879f00b18fe17bddc989b9582d}{si7
 \subsection*{Enumerations}
 \begin{DoxyCompactItemize}
 \item 
-enum \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON} \{ \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625eaf7e31fbc799b25fdc172fb9d6c01ae84}{S\+I7021\+\_\+12\+\_\+14\+\_\+\+R\+ES} = 0x00, 
-\hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625ea3f096d60050714a92d1889dbb9d4ba8a}{S\+I7021\+\_\+8\+\_\+12\+\_\+\+R\+ES} = 0x01, 
-\hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625ea2cfafb4c2314cb0c4a4ee0f840f5f3a1}{S\+I7021\+\_\+10\+\_\+13\+\_\+\+R\+ES} = 0x80, 
-\hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625ea7db14da7bc2b59132110df783f3b31b0}{S\+I7021\+\_\+11\+\_\+11\+\_\+\+R\+ES} = 0x81
+enum \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON} \{ \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625eaf7e31fbc799b25fdc172fb9d6c01ae84}{S\+I7021\+\_\+12\+\_\+14\+\_\+\+R\+ES} = (uint8\+\_\+t) 0x00, 
+\hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625ea3f096d60050714a92d1889dbb9d4ba8a}{S\+I7021\+\_\+8\+\_\+12\+\_\+\+R\+ES} = (uint8\+\_\+t) 0x01, 
+\hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625ea2cfafb4c2314cb0c4a4ee0f840f5f3a1}{S\+I7021\+\_\+10\+\_\+13\+\_\+\+R\+ES} = (uint8\+\_\+t) 0x80, 
+\hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625ea7db14da7bc2b59132110df783f3b31b0}{S\+I7021\+\_\+11\+\_\+11\+\_\+\+R\+ES} = (uint8\+\_\+t) 0x81
  \}\begin{DoxyCompactList}\small\item\em Enum contain all valid Resolution configuration of sensor. \end{DoxyCompactList}
 \item 
-enum \hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+S\+T\+A\+T\+US} \{ \hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3acdfe83b75cad583ca9ee2997322174ea}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+OK} = 0x01, 
-\hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3a1ad64fa668e0c9b079a23971c4bb1505}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+L\+OW} = 0x00
+enum \hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+S\+T\+A\+T\+US} \{ \hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3acdfe83b75cad583ca9ee2997322174ea}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+OK} = (uint8\+\_\+t) 0x01, 
+\hyperlink{si7021_8h_ae8747642c3a83dd9ae9ae0333b84f9f3a1ad64fa668e0c9b079a23971c4bb1505}{S\+I7021\+\_\+\+V\+D\+D\+\_\+\+L\+OW} = (uint8\+\_\+t) 0x00
  \}\begin{DoxyCompactList}\small\item\em V\+DD status of sensor return type. \end{DoxyCompactList}
 \end{DoxyCompactItemize}
 \subsection*{Functions}
@@ -249,11 +249,11 @@ Error type for return value.
 
 Definition at line 121 of file si7021.\+h.
 
-\mbox{\Hypertarget{si7021_8h_afd2b81672571b0b768341fc251a9965b}\label{si7021_8h_afd2b81672571b0b768341fc251a9965b}} 
+\mbox{\Hypertarget{si7021_8h_a5776594c8675bec0e49bfcc556d80850}\label{si7021_8h_a5776594c8675bec0e49bfcc556d80850}} 
 \index{si7021.\+h@{si7021.\+h}!S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON@{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}}
 \index{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON@{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}!si7021.\+h@{si7021.\+h}}
 \subsubsection{\texorpdfstring{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}{SI7021\_RESOLUTION}}
-{\footnotesize\ttfamily typedef enum \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON} \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}}
+{\footnotesize\ttfamily typedef enum \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}  \hyperlink{si7021_8h_ad2e0aa498b8faee91d8da4930f61625e}{S\+I7021\+\_\+\+R\+E\+S\+O\+L\+U\+T\+I\+ON}}
 
 
 
